# openvpn-arachne-plugin

./: .autotools  .clangd  .cproject  .gitignore  Makefile.am  build.sh  configure.ac  gen-auto.sh  openvpn-arachne-plugin.spec  openvpn-arachne-plugin.spec.in  openvpn-plugin-arachne.spec.in  openvpn-plugin-arachne.te  podman-build.sh  update-version.sh
.copr/: Makefile
debian/: debian.changelog.in  debian.rules.in  openvpn-arachne-plugin.dsc.in
old-version/: .project  gen-auto.sh
old-version/debian/: Makefile.am  build.changes  debian.control.in
old-version/src/: ArachnePlugin.cpp  ArachnePlugin.h  ClientSession.h  Firewall.h  Http.h  Response.cpp  Url.cpp
rust/: Cargo.toml  gen-firewalld-src.sh
rust/src/: .firewall.rs.kate-swp  firewall.rs  handle.rs  lib.rs  types.rs
rust/src/firewalld/: config.rs  direct.rs  firewall_d1.rs  ipset.rs  policies.rs  policy.rs  zone.rs
src/: ArachneLogger.cpp  ArachneLogger.h  ArachnePlugin.cpp  ArachnePlugin.h  BreakDownRootDaemon.cpp  BreakDownRootDaemon.h  ClientSession.cpp  ClientSession.h  Config.cpp  Config.h  Firewall.cpp  Firewall.h  FirewallD1.cpp  FirewallD1.h  FirewallD1.xml  FirewallD1_Config.cpp  FirewallD1_Config.h  FirewallD1_Config.xml  FirewallD1_Config_Proxy.h  FirewallD1_Config_Zone.cpp  FirewallD1_Config_Zone.h  FirewallD1_Config_Zone.xml  FirewallD1_Proxy.h  FirewallD1_Zone.cpp  FirewallD1_Zone.h  Http.cpp  Http.h  IniFile.cpp  IniFile.h  IniFileException.cpp  Logger.cpp  Logger.h  Makefile.am  Request.cpp  Response.cpp  Url.cpp  Url.h  gen-proxies.sh  main.cpp
src/firewalld-proxy-sdbus-1/: FirewallD1_Config_IpSet_Proxy.h  FirewallD1_Config_Policy_Proxy.h  FirewallD1_Config_Proxy.h  FirewallD1_Proxy.h
src/firewalld-proxy-sdbus-2/: FirewallD1_Config_IpSet_Proxy.h  FirewallD1_Config_Policy_Proxy.h  FirewallD1_Config_Proxy.h  FirewallD1_Proxy.h
test/: client.conf  create-test-config.sh  server.conf
